--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "dest/main.ts",
+            "src": "src/main.ts",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "dest/main.ts",
+            "dest": "src/main.ts",
             "methods": [
                 "GET",
                 "POST",
@@ -17,5 +17,7 @@
                 "DELETE"
             ]
         }
-    ]
+    ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
